K/kube-image-webhook-VXPeArrykv/kube-image-webhook.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-kube-image-webhook
  labels:
    helm.sh/chart: kube-image-webhook-0.1.2
    app.kubernetes.io/name: kube-image-webhook
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: v0.2.0
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: kube-image-webhook
    app.kubernetes.io/instance: release-name
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-kube-image-webhook
  labels:
    helm.sh/chart: kube-image-webhook-0.1.2
    app.kubernetes.io/name: kube-image-webhook
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: v0.2.0
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: kube-image-webhook
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kube-image-webhook
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: release-name-kube-image-webhook
      securityContext:
        fsGroup: 1001
        runAsGroup: 1001
        runAsNonRoot: true
        runAsUser: 1001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: kube-image-webhook
          securityContext:
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 10360
            allowPrivilegeEscalation: false
          image: registry.gitlab.com/autokubeops/kube-image-webhook:v0.2.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8443
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
              scheme: HTTPS
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
              scheme: HTTPS
          resources: {}
          volumeMounts:
            - mountPath: /var/run/secrets/certs
              name: certs
              readOnly: true
            - mountPath: /var/run/config
              name: config
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: release-name-kube-image-webhook
        - name: certs
          secret:
            optional: false
            secretName: null
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: release-name-kube-image-webhook
  labels:
    helm.sh/chart: kube-image-webhook-0.1.2
    app.kubernetes.io/name: kube-image-webhook
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: v0.2.0
    app.kubernetes.io/managed-by: Helm
  annotations: null
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: null
      service:
        name: release-name-kube-image-webhook
        namespace: default
        path: /mutate
        port: 443
    name: kube-image-webhook.dcas.dev
    sideEffects: NoneOnDryRun
    namespaceSelector: {}
    objectSelector: {}
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - pods
        scope: '*'
